@@ -998,6 +998,7 @@ class ModelSQL(ModelStorage):
 
         cls.__check_timestamp(ids)
 
+        has_translation = False
         tree_ids = {}
         for fname, field in cls._fields.iteritems():
             if (isinstance(field, fields.Many2One)
@@ -1008,6 +1009,9 @@ class ModelSQL(ModelStorage):
                     where = reduce_ids(field.sql_column(table), sub_ids)
                     cursor.execute(*table.select(table.id, where=where))
                     tree_ids[fname] += [x[0] for x in cursor.fetchall()]
+            if (getattr(field, 'translate', False)
+                    and not hasattr(field, 'set')):
+                has_translation = True
 
         foreign_keys_tocheck = []
         foreign_keys_toupdate = []
@@ -1111,7 +1115,8 @@ class ModelSQL(ModelStorage):
                         exception, {}, transaction=transaction)
                 raise
 
-        Translation.delete_ids(cls.__name__, 'model', ids)
+        if has_translation:
+            Translation.delete_ids(cls.__name__, 'model', ids)
 
         cls._insert_history(ids, deleted=True)
 
